# MyCTL-Next

./: .directory  .gitignore  AGENTS.md  PLAN.md  README.md  ipc-payload-formatted.json  ipc-sent.json  mise.toml  package.json
.github/workflows/: update-aur.yml
app/lib/: _loader.sh
app/modules/: snipping.sh  tui-app.sh
app/pylib/: __init__.py
app/src/: parse-hconf.awk
cmd/: daemon.go  go.mod  go.sum  main.go
daemon/: myctld  pyproject.toml
daemon/myctl/: __init__.py
daemon/myctld/: __init__.py  __main__.py  app.py  config.py  ipc.py  logging.py  registry.py  schema.py
daemon/tests/: __init__.py  conftest.py  test_context_safety.py  test_decorator_discovery.py  test_flag_default_behaviour.py  test_import_isolation.py  test_logging_metadata.py  test_registry_dispatch.py
docs/: main.py  package.json  pyproject.toml  vars.js
docs/.vitepress/: config.mjs
docs/md/: architecture.md  bootstrapping.md  discovery.md  index.md  installation.md  ipc-protocol.md  plugin-sdk.md  roadmap.md
docs/src/: __init__.py  commands.py
legacy/lib/: _loader.sh  colors.sh  import-lib.sh  logger.sh  utils.sh
legacy/plugins/: gtk-utils.sh  keybinds-menu.sh  wob-osd.sh
modules/: audio-utils.sh  get-desktop-file.sh  hyprlang-utils.sh  idle-utils.sh  pkg-utils.sh  power-menu.sh  rofi-utils.sh  tui-app.sh  wob-osd.sh
modules/snip/: module.yml
plugins/audio/: main.py  pyproject.toml
plugins/flagprobe/: main.py  pyproject.toml
plugins/plugin/: main.py  pyproject.toml
plugins/sysinfo/: main.py  pyproject.toml
plugins/sysinfo/src/: __init__.py  handlers.py
(+93 files in other folders)
